# uniOS

./: .clang-format  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GNUmakefile  LICENSE  Makefile  README.md  SECURITY.md  limine.conf  linker.ld  meson.build  unifs.img
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cursors/progress/: metadata.json
cursors/wait/: metadata.json
docs/: ARCHITECTURE.md  ROADMAP.md  SCRIPTING.md  index.html  robots.txt  sitemap.xml  style.css
docs/reference/: README.md  architecture.md  scripting.md
docs/reference/formats/: README.md  uocu.md  uof.md  uoic.md  uowp.md
include/boot/: boot_info.h
include/drivers/acpi/: acpi.h
include/drivers/apic/: ioapic.h
include/drivers/bus/pci/: msi.h  pci.h
include/drivers/bus/usb/: usb.h  usb_hub.h
include/drivers/class/hid/: hid_report_parser.h  input.h  ps2_keyboard.h  ps2_mouse.h  usb_hid.h
include/drivers/net/e1000/: e1000.h
include/drivers/net/rtl8139/: rtl8139.h
include/drivers/rtc/: rtc.h
include/drivers/sound/: mp3.h  sound.h  wav.h
include/drivers/sound/ac97/: ac97.h
include/drivers/sound/hda/: hda.h
include/drivers/storage/: ahci.h  ata.h  usb_msc.h
include/drivers/video/: display.h  font.h  framebuffer.h
include/kernel/: boot_display_timing.h  boot_splash.h  cpu.h  debug.h  elf.h  event.h  gui.h  irq.h  ktest.h  panic.h  process.h  scheduler.h  shell.h  syscall.h  terminal.h  theme.h  version.h
include/kernel/arch/x86_64/: gdt.h  idt.h  io.h  pat.h  pic.h  serial.h
include/kernel/fs/: block_dev.h  fat32.h  memfd.h  partition.h  pipe.h  storage_guard.h  unifs.h  vfs.h  volume.h
include/kernel/mm/: bitmap.h  heap.h  pmm.h  vma.h  vmm.h
include/kernel/net/: arp.h  dhcp.h  dns.h  ethernet.h  icmp.h  ipv4.h  net.h  tcp.h  udp.h
include/kernel/sync/: epoll.h  futex.h  mutex.h  spinlock.h
include/kernel/time/: timer.h
include/libk/: kstd.h  kstring.h  kuser.h  result.h
include/sys/: epoll.h  mman.h
include/uapi/: display.h  event.h  fs.h  gui.h  signal.h  syscalls.h  syscalls_ext.h  sysinfo.h
include/wm/: interaction_policy.h
kernel/: debug.cpp  debug.h  elf.cpp  font.h  gdt.cpp  gdt_asm.asm  graphics.cpp  graphics.h  heap.cpp  idt.cpp  interrupts.asm  kernel.cpp  keyboard.cpp  keyboard.h  kmain.cpp  linker.ld  mouse.cpp  mouse.h  pic.cpp  pic.h  pipe.cpp  pmm.cpp  pmm.h  process.asm  process.h  scheduler.cpp  scheduler.h  serial.h  shell.cpp  shell.h  syscall.cpp  syscall.h  timer.cpp  timer.h  unifs.cpp  unifs.h  usb.cpp  usb_hid.cpp  vmm.cpp  vmm.h
kernel/arch/: gdt.cpp  gdt.h  gdt_asm.asm  idt.cpp  idt.h  interrupts.asm  io.h  pic.cpp  process.asm
kernel/core/: debug.cpp  debug.h  elf.cpp  elf.h  kmain.cpp  kstring.h  mutex.cpp  mutex.h  panic.cpp  panic.h  process.h  scheduler.cpp  scheduler.h  spinlock.h  syscall.cpp  syscall.h  version.h
kernel/drivers/: acpi.cpp  acpi.h  font.h  graphics.cpp  graphics.h  input.cpp  input.h  pci.cpp  pci.h  ps2_keyboard.cpp  ps2_keyboard.h  ps2_mouse.cpp  ps2_mouse.h  rtc.cpp  rtc.h  serial.cpp  terminal.cpp  terminal.h  timer.cpp  timer.h
kernel/drivers/net/: e1000.cpp  e1000.h  rtl8139.cpp  rtl8139.h
kernel/drivers/sound/: ac97.cpp  ac97.h  hda.cpp  hda.h  mp3.cpp  mp3.h  sound.cpp  sound.h  wav.cpp
kernel/drivers/usb/: usb.cpp  usb.h  usb_hid.cpp  usb_hid.h  xhci.cpp  xhci.h
kernel/fs/: pipe.cpp  pipe.h  unifs.cpp  unifs.h
kernel/mem/: bitmap.cpp  bitmap.h  heap.cpp  heap.h  pat.cpp  pat.h  pmm.cpp  pmm.h  vmm.cpp  vmm.h
kernel/net/: arp.cpp  arp.h  dhcp.cpp  dhcp.h  dns.cpp  dns.h  ethernet.cpp  ethernet.h  icmp.cpp  icmp.h  ipv4.cpp  ipv4.h  net.cpp  tcp.cpp  tcp.h  udp.cpp  udp.h
kernel/shell/: shell.cpp  shell.h
rootfs/: hello.txt
rootfs/etc/: shell.rc  system.conf  wallpaper.conf
src/bootloader/: README.md
src/bootloader/uefi/: efi.h  handoff.asm  main.cpp
src/drivers/acpi/: acpi.cpp
src/drivers/apic/: ioapic.cpp
src/drivers/rtc/: rtc.cpp
src/drivers/sound/: mp3.cpp  sound.cpp  wav.cpp
src/drivers/storage/: ahci.cpp  ahci_tests.cpp  ata.cpp  usb_msc.cpp
src/drivers/video/: display.cpp  display_tests.cpp  framebuffer.cpp
src/fs/: block_dev.cpp  partition.cpp  partition_tests.cpp  pipe.cpp  storage_guard.cpp  storage_guard_tests.cpp  vfs.cpp  volume.cpp
src/fs/fat32/: fat32.cpp  fat32_tests.cpp
src/fs/unifs/: unifs.cpp
src/kernel/core/: boot_display_timing.cpp  boot_splash.cpp  cpp_init.cpp  cpu.cpp  debug.cpp  elf.cpp  gui.cpp  input_event.cpp  irq.cpp  kmain.cpp  ktest.cpp  kuser.cpp  panic.cpp  ssp.cpp  syscall.cpp  terminal.cpp  theme.cpp
src/kernel/fs/: memfd.cpp
src/kernel/sched/: scheduler.cpp
src/kernel/shell/: shell.cpp
src/kernel/sync/: epoll.cpp  futex.cpp  mutex.cpp
src/kernel/tests/: extended_syscall_tests.cpp  wm_interaction_policy_tests.cpp
src/kernel/time/: timer.cpp
src/mm/: bitmap.cpp  heap.cpp  pmm.cpp  vma.cpp  vmm.cpp
src/mm/tests/: heap_tests.cpp  pmm_tests.cpp  vmm_tests.cpp
src/net/: arp.cpp  dhcp.cpp  dns.cpp  ethernet.cpp  icmp.cpp  ipv4.cpp  net.cpp  tcp.cpp  udp.cpp
src/usr/: shell_layout.h  user.ld
src/usr/dock/: dock.cpp
src/usr/init/: init.cpp
src/usr/libc/: config_utils.h  crt0.asm  cxx.cpp  log.c  log.h  socket.c  socket.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  syscall.h  unistd.c  unistd.h  wallpaper_defaults.h  wav.c  wav.h
src/usr/libgui/: font.cpp  gui.cpp  gui.h  gui_canvas_utils.h  image.cpp
src/usr/menubar/: menubar.cpp
src/usr/shell/: shell.cpp  shell_cmds.cpp  shell_editor.cpp  shell_internal.h  shell_script.cpp  shell_utils.cpp
src/usr/wm/: wm_blur.cpp  wm_compose.cpp  wm_core.h  wm_logic.cpp  wm_main.cpp  wm_overlays.cpp  wm_render.cpp
toolchains/: llvm.ini
tools/: appicon_rasterize.py  build_efi_image.py  create_iso.py  cursor_rasterize.py  meson_list_sources.py  migrate_includes.py  mkunifs.py  qemu_smoke.py  stage_rootfs.py  sync_version.py  uof_convert.py  wallpaper_package.py
userspace/: hello.asm
usr/userspace/: filetest.asm  hello.asm  user.ld
(+117 files in other folders)
